Fix bit packing of StyleRareInheritedData on Windows https://bugs.webkit.org/show_bug.cgi?id=89112

Reviewed by Ryosuke Niwa.

On my machine (64 bit Chromium Linux), StyleRareInheritedData is 168 bytes.

No new tests, added a compile assert to ensure correctness going forward.

* rendering/style/StyleRareInheritedData.cpp:
(SameSizeAsStyleRareInheritedData):
(WebCore):
* rendering/style/StyleRareInheritedData.h:
(StyleRareInheritedData):


Canonical link: https://commits.webkit.org/106982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120366 268f45cc-cd09-0410-ab3c-d52691b4dbfc